# smarthome-gpt

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/adapters/: data_processing_service.py  data_repository_service.py  inference_service.py  retrieval_service.py
backend/src/api/: __init__.py
backend/src/api/inference/: __init__.py  dependencies.py  domain.py
backend/src/api/repository/: __init__.py  dependencies.py
backend/src/config/: __init__.py  auth.py  config.yml  dependencies.py
backend/src/domain/: answer.py  content_like.py  context.py  date_like.py  file_data.py  image.py  knowledge.py  message.py  model.py  query.py  question.py  raw_data.py  system_prompt.py
backend/src/ports/: data_processing_service_port.py  data_repository_service_port.py  inference_service_port.py  retrieval_service_port.py
