[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
boto3 = "^1.34.64"
pyyaml = "^6.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pandas = "2.2.0"
spacy = "^3.7.4"
langchain = "^0.3.1"
rapidfuzz = "^3.6.1"
poetry-plugin-export = "^1.7.0"
typing-extensions = ">=4.9.0,<5"
pre-commit = "^3.6.2"
plotly = "^5.20.0"
nbformat = "^5.10.3"
azure-search-documents = "^11.5.1"
langchain-openai = "^0.2.1"
langchain-community = "^0.3.1"
azure-storage-blob = "^12.23.1"
libmagic = "^1.0"
python-magic = "^0.4.27"
azure-identity = "^1.18.0"
tqdm = "^4.66.5"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
pymupdf = "^1.24.13"
pillow = "^11.0.0"
msal = "^1.31.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
azure-data-tables = "^12.5.0"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.12"
mypy = "^1.6.1"
pandas-stubs = "^2.1.1.230928"
types-requests = "^2.25.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
ipykernel = "^6.29.3"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# follow_imports = "silent"
plugins = "pydantic.mypy"

[tool.flake8]
extend-ignore = "E501"
exclude = [
    ".venv",
]

[tool.pyright]
reportUnusedCallResult = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
